# LRC-Tools

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  README.txt  sync_deps_ninja.sh
CMUS Lyrics Plugin/: AppDelegate.h  AppDelegate.mm  CMUS Lyrics Plugin-Info.plist  CmusStatus.cpp  EXView.h  EXView.mm  Lyrics.cpp  Lyrics.h  cmuslyrics-20.tif  main.mm
CMUS Lyrics Plugin Tests/: CMUS_Lyrics_Plugin_Tests.m
CMUS Lyrics Plugin.xcodeproj/: project.pbxproj
CMUS Lyrics Plugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CMUS Lyrics Plugin.xcodeproj/project.xcworkspace/xcshareddata/: CMUS Lyrics Plugin.xccheckout
CMUS Lyrics Plugin.xcodeproj/project.xcworkspace/xcuserdata/Edwin.xcuserdatad/: .fuse_hidden00001d70000000a1  UserInterfaceState.xcuserstate
CMUS Lyrics Plugin.xcodeproj/xcuserdata/Edwin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CMUS Lyrics Plugin.xcodeproj/xcuserdata/Edwin.xcuserdatad/xcschemes/: CMUS Lyrics Plugin.xcscheme  xcschememanagement.plist
CMUS Lyrics Plugin/Base.lproj/: MainMenu.xib
CMUS Lyrics Plugin/Images.xcassets/AppIcon.appiconset/: Contents.json
CMUS Lyrics Plugin/en.lproj/: Credits.rtf
CMUS Lyrics PluginTests/: CMUS_Lyrics_PluginTests.m
CMUSLyricsPluginTests/: CMUSLyricsPluginTests-Info.plist  CMUSLyricsPluginTests.m  LyricsClassTest.mm
cli/: CMakeLists.txt  lrc_lookup.cc  lrc_metadata.cc
liblrc/: CMakeLists.txt  lrc_parser.cc  lrc_parser.h  lyrics.cc  lyrics.h  utils.cc  utils.h
test/: CMakeLists.txt
test/liblrc/: CMakeLists.txt  lrc_parser_unittest.cc  lyrics_unittest.cc  main.cc  utils_unittest.cc
